chore: migrate to monosize

--- a/package.json
+++ b/package.json
@@ -207,11 +207,11 @@
     "beachball": "2.31.0",
     "chalk": "4.1.0",
     "chrome-remote-interface": "0.28.2",
-    "ci-info": "3.2.0",
+    "ci-info": "3.8.0",
     "circular-dependency-plugin": "5.2.2",
     "clean-css": "4.2.3",
     "clean-webpack-plugin": "4.0.0",
-    "cli-table3": "0.6.1",
+    "cli-table3": "0.6.3",
     "connect-history-api-fallback": "1.6.0",
     "copy-webpack-plugin": "8.1.0",
     "cross-env": "^5.1.4",
@@ -284,6 +284,8 @@
     "markdown-table": "2.0.0",
     "memfs": "3.2.2",
     "mini-css-extract-plugin": "2.6.1",
+    "monosize": "0.1.0",
+    "monosize-storage-azure": "0.0.3",
     "node-fetch": "2.6.7",
     "node-plop": "0.25.0",
     "node-polyfill-webpack-plugin": "1.0.2",
@@ -358,7 +360,7 @@
     "webpack-dev-server": "4.7.4",
     "webpack-hot-middleware": "2.25.1",
     "webpack-merge": "5.7.3",
-    "workspace-tools": "0.27.0",
+    "workspace-tools": "0.29.1",
     "yargs": "13.3.2",
     "yargs-parser": "13.1.2",
     "yargs-unparser": "2.0.0"
