--- a/packages/react-components/react-dialog/package.json
+++ b/packages/react-components/react-dialog/package.json
@@ -15,7 +15,7 @@
     "build": "just-scripts build",
     "clean": "just-scripts clean",
     "code-style": "just-scripts code-style",
-    "bundle-size": "bundle-size measure",
+    "bundle-size": "monosize measure",
     "just": "just-scripts",
     "lint": "just-scripts lint",
     "start": "yarn storybook",
