--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -131,6 +131,10 @@
       "types": "./dist/esm/toggle-button/define.d.ts",
       "default": "./dist/esm/toggle-button/define.js"
     },
+    "./toolbar": {
+      "types": "./dist/esm/toolbar/define.d.ts",
+      "default": "./dist/esm/toolbar/define.js"
+    },
     "./theme.js": {
       "types": "./dist/esm/theme/index.d.ts",
       "default": "./dist/esm/theme/index.js"
