--- a/packages/react-conformance/package.json
+++ b/packages/react-conformance/package.json
@@ -29,7 +29,7 @@
     "chalk": "^4.1.0",
     "react-docgen-typescript": "^2.1.0",
     "react-is": "^17.0.2",
-    "tslib": "^2.1.0"
+    "@swc/helpers": "^0.4.14"
   },
   "peerDependencies": {
     "@types/react": ">=16.8.0 <19.0.0",
