--- a/packages/react-components/react-link/package.json
+++ b/packages/react-components/react-link/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@fluentui/keyboard-keys": "^9.0.3",
     "@fluentui/react-jsx-runtime": "9.0.0-alpha.9",
+    "@fluentui/react-shared-contexts": "^9.5.1",
     "@fluentui/react-tabster": "^9.9.1",
     "@fluentui/react-theme": "^9.1.9",
     "@fluentui/react-utilities": "^9.10.0",
