--- a/packages/react-components/react-breadcrumb/package.json
+++ b/packages/react-components/react-breadcrumb/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@fluentui/react-breadcrumb",
-  "version": "9.0.0-alpha.0",
-  "private": true,
+  "name": "@fluentui/react-breadcrumb-preview",
+  "version": "0.0.0",
   "description": "Breadcrumb component for Fluent UI React.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -56,8 +55,7 @@
   "beachball": {
     "disallowedChangeTypes": [
       "major",
-      "minor",
-      "patch"
+      "prerelease"
     ]
   },
   "exports": {
