--- a/packages/react-components/theme-designer/package.json
+++ b/packages/react-components/theme-designer/package.json
@@ -36,7 +36,7 @@
     "@fluentui/react-components": "^9.25.1",
     "@fluentui/react-context-selector": "^9.1.26",
     "@fluentui/react-icons": "^2.0.203",
-    "@fluentui/react-storybook-addon-codesandbox": "9.0.0-alpha.0",
+    "@fluentui/react-storybook-addon-codesandbox": "^0.1.0",
     "@fluentui/react-theme": "^9.1.9",
     "@fluentui/react-utilities": "^9.10.1",
     "@griffel/react": "^1.5.7",
