--- a/apps/public-docsite-v9/package.json
+++ b/apps/public-docsite-v9/package.json
@@ -30,8 +30,8 @@
     "@fluentui/react-northstar": "^0.66.4",
     "@fluentui/react-icons-northstar": "^0.66.4",
     "@fluentui/react-components": "^9.25.1",
-    "@fluentui/react-storybook-addon": "9.0.0-rc.1",
-    "@fluentui/react-storybook-addon-codesandbox": "9.0.0-alpha.0",
+    "@fluentui/react-storybook-addon": "^0.1.0",
+    "@fluentui/react-storybook-addon-codesandbox": "^0.1.0",
     "@fluentui/theme-designer": "^9.0.0",
     "@griffel/react": "^1.5.7",
     "react": "17.0.2",
