--- a/packages/react-components/react-storybook-addon/package.json
+++ b/packages/react-components/react-storybook-addon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fluentui/react-storybook-addon",
-  "version": "9.0.0-rc.1",
+  "version": "0.1.0",
   "private": true,
   "description": "fluentui react storybook addon",
   "main": "lib-commonjs/index.js",
@@ -47,7 +47,8 @@
   },
   "beachball": {
     "disallowedChangeTypes": [
-      "major"
+      "major",
+      "prerelease"
     ]
   },
   "exports": {
