chore: update apps and libraries to use * for inner workspace dependencies

--- a/packages/common-styles/package.json
+++ b/packages/common-styles/package.json
@@ -18,7 +18,7 @@
     "office-ui-fabric-core": "^11.0.0"
   },
   "devDependencies": {
-    "@fluentui/style-utilities": "^8.9.16",
+    "@fluentui/style-utilities": "*",
     "@fluentui/scripts-tasks": "*"
   }
 }
