--- a/packages/react-components/react-link/package.json
+++ b/packages/react-components/react-link/package.json
@@ -26,10 +26,10 @@
     "test-ssr": "test-ssr \"./stories/**/*.stories.tsx\""
   },
   "devDependencies": {
-    "@fluentui/a11y-testing": "^0.1.0",
+    "@fluentui/a11y-testing": "*",
     "@fluentui/eslint-plugin": "*",
     "@fluentui/react-conformance": "*",
-    "@fluentui/react-conformance-griffel": "^9.0.0",
+    "@fluentui/react-conformance-griffel": "*",
     "@fluentui/scripts-api-extractor": "*",
     "@fluentui/scripts-tasks": "*"
   },
