--- a/packages/react-examples/package.json
+++ b/packages/react-examples/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
-    "@fluentui/storybook": "^1.0.0",
+    "@fluentui/storybook": "*",
     "@types/d3-format": "^1.3.1",
     "@types/d3-fetch": "^3.0.1",
     "@fluentui/scripts-webpack": "*",
