--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -25,8 +25,8 @@
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
-    "@fluentui/jest-serializer-merge-styles": "^8.0.29",
-    "@fluentui/test-utilities": "^8.3.6",
+    "@fluentui/jest-serializer-merge-styles": "*",
+    "@fluentui/test-utilities": "*",
     "@fluentui/scripts-api-extractor": "*",
     "@fluentui/scripts-jest": "*",
     "@fluentui/scripts-tasks": "*"
