--- a/packages/react-components/react-search/package.json
+++ b/packages/react-components/react-search/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@fluentui/react-search",
-  "version": "9.0.0-alpha.0",
-  "private": true,
+  "version": "0.0.0",
   "description": "Search input for Fluent UI v9",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -50,8 +49,7 @@
   "beachball": {
     "disallowedChangeTypes": [
       "major",
-      "minor",
-      "patch"
+      "prerelease"
     ]
   },
   "exports": {
