feat: implements selection

--- a/packages/react-components/react-tree/package.json
+++ b/packages/react-components/react-tree/package.json
@@ -40,9 +40,11 @@
     "@fluentui/react-aria": "^9.3.26",
     "@fluentui/react-avatar": "^9.5.12",
     "@fluentui/react-button": "^9.3.23",
+    "@fluentui/react-checkbox": "^9.1.24",
     "@fluentui/react-context-selector": "^9.1.26",
     "@fluentui/react-icons": "^2.0.203",
     "@fluentui/react-portal": "^9.3.1",
+    "@fluentui/react-radio": "^9.1.24",
     "@fluentui/react-shared-contexts": "^9.6.0",
     "@fluentui/react-tabster": "^9.10.0",
     "@fluentui/react-theme": "^9.1.9",
