--- a/packages/react-components/react-tree/package.json
+++ b/packages/react-components/react-tree/package.json
@@ -37,12 +37,14 @@
   },
   "dependencies": {
     "@fluentui/keyboard-keys": "^9.0.3",
-    "@fluentui/react-aria": "^9.3.25",
-    "@fluentui/react-avatar": "^9.5.9",
-    "@fluentui/react-button": "^9.3.20",
-    "@fluentui/react-context-selector": "^9.1.25",
+    "@fluentui/react-aria": "^9.3.24",
+    "@fluentui/react-avatar": "^9.5.8",
+    "@fluentui/react-button": "^9.3.19",
+    "@fluentui/react-checkbox": "^9.1.20",
+    "@fluentui/react-context-selector": "^9.1.24",
     "@fluentui/react-icons": "^2.0.203",
-    "@fluentui/react-portal": "^9.2.16",
+    "@fluentui/react-portal": "^9.2.15",
+    "@fluentui/react-radio": "^9.1.20",
     "@fluentui/react-shared-contexts": "^9.5.1",
     "@fluentui/react-tabster": "^9.9.1",
     "@fluentui/react-theme": "^9.1.9",
