--- a/azure-pipelines.vrt-baseline.yml
+++ b/azure-pipelines.vrt-baseline.yml
@@ -16,6 +16,8 @@ pool: '1ES-Host-Ubuntu'
 
 jobs:
   - job: VRToolUpdateBaseline_V9
+    variables:
+      pipelineId: '311'
     workspace:
       clean: all
     steps:
@@ -38,11 +40,13 @@ jobs:
           VR_APP_API_URL: $(VR_APP_API_URL)
 
   - job: VRToolUpdateBaseline_V8
+    variables:
+      pipelineId: '312'
     workspace:
       clean: all
     steps:
       - template: .devops/templates/tools.yml
-
+      - template: download-vr-cli.yml
       - template: .devops/templates/runpublishvrscreenshot.yml
         parameters:
           fluentVersion: v8
@@ -60,11 +64,13 @@ jobs:
           VR_APP_API_URL: $(VR_APP_API_URL)
 
   - job: VRToolUpdateBaseline_V0
+    variables:
+      pipelineId: '313'
     workspace:
       clean: all
     steps:
       - template: .devops/templates/tools.yml
-
+      - template: download-vr-cli.yml
       - template: .devops/templates/runpublishvrscreenshot.yml
         parameters:
           fluentVersion: v0
