--- a/package.json
+++ b/package.json
@@ -87,13 +87,13 @@
     "@cypress/react": "5.12.4",
     "@cypress/webpack-dev-server": "1.8.3",
     "@fluentui/react-icons": "^2.0.203",
-    "@griffel/babel-preset": "1.4.13",
-    "@griffel/eslint-plugin": "^1.2.0",
-    "@griffel/jest-serializer": "1.1.9",
-    "@griffel/react": "^1.5.7",
-    "@griffel/shadow-dom": "0.1.0",
-    "@griffel/webpack-extraction-plugin": "0.3.11",
-    "@griffel/webpack-loader": "2.1.13",
+    "@griffel/babel-preset": "1.4.17",
+    "@griffel/eslint-plugin": "1.2.0",
+    "@griffel/jest-serializer": "1.1.13",
+    "@griffel/react": "^1.5.11",
+    "@griffel/shadow-dom": "0.1.2",
+    "@griffel/webpack-extraction-plugin": "0.3.15",
+    "@griffel/webpack-loader": "2.1.17",
     "@jest/reporters": "29.5.0",
     "@mdx-js/loader": "1.6.22",
     "@microsoft/api-extractor": "7.31.2",
