--- a/apps/public-docsite-v9/package.json
+++ b/apps/public-docsite-v9/package.json
@@ -23,6 +23,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
+    "@fluentui/react-breadcrumb-preview": "0.0.0",
     "@fluentui/react-datepicker-compat": "^0.2.0",
     "@fluentui/react-migration-v8-v9": "^9.3.7",
     "@fluentui/react-migration-v0-v9": "^9.0.10",
