--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "code-style": "lage code-style --verbose",
     "codepen": "cd packages/react && node ../../scripts/executors/local-codepen.js",
     "copy-notices": "node scripts/generators/copy-notices.js",
-    "create-component": "plop --plopfile ./scripts/generators/create-component/index.ts --dest . --require @fluentui/scripts-ts-node/register",
-    "create-package": "plop --plopfile ./scripts/generators/create-package/index.ts --dest . --require @fluentui/scripts-ts-node/register",
+    "create-component": "yarn nx workspace-generator react-component",
+    "create-package": "yarn nx workspace-generator react-library",
     "e2e": "lage e2e --verbose --concurrency=1",
     "format": "node scripts/executors/format.js",
     "generate-version-files": "node -r ./scripts/ts-node/register ./scripts/generators/generate-version-files",
