--- a/package.json
+++ b/package.json
@@ -102,11 +102,11 @@
     "@microsoft/loader-load-themed-styles": "2.0.17",
     "@microsoft/tsdoc": "0.14.1",
     "@nrwl/cli": "15.9.4",
-    "@nrwl/devkit": "15.9.4",
-    "@nrwl/jest": "15.9.4",
-    "@nrwl/js": "15.9.4",
-    "@nrwl/node": "15.9.4",
-    "@nrwl/workspace": "15.9.4",
+    "@nrwl/devkit": "16.0.3",
+    "@nrwl/jest": "16.0.3",
+    "@nrwl/js": "16.0.3",
+    "@nrwl/node": "16.0.3",
+    "@nrwl/workspace": "16.0.3",
     "@octokit/rest": "18.12.0",
     "@phenomnomnominal/tsquery": "6.1.2",
     "@storybook/addon-a11y": "6.5.15",
@@ -127,6 +127,7 @@
     "@storybook/react": "6.5.15",
     "@storybook/theming": "6.5.15",
     "@swc-node/register": "1.6.1",
+    "@swc/cli": "0.1.62",
     "@swc/core": "1.3.30",
     "@swc/helpers": "0.4.14",
     "@testing-library/dom": "8.11.3",
@@ -284,7 +285,7 @@
     "monosize-storage-azure": "0.0.3",
     "node-plop": "0.25.0",
     "node-polyfill-webpack-plugin": "1.0.2",
-    "nx": "15.9.4",
+    "nx": "16.0.3",
     "p-queue": "6.6.2",
     "parallel-webpack": "2.6.0",
     "parse-diff": "0.7.1",
@@ -338,7 +339,7 @@
     "terser-webpack-plugin": "5.3.9",
     "through2": "4.0.2",
     "tmp": "0.2.1",
-    "ts-jest": "29.1.0",
+    "ts-jest": "29.1.1",
     "ts-loader": "9.3.1",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
