--- a/tools/project.json
+++ b/tools/project.json
@@ -5,7 +5,7 @@
   "projectType": "library",
   "targets": {
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/tools"],
       "options": {
         "jestConfig": "tools/jest.config.ts",
