chore: migrate to lerna v6

--- a/nx.json
+++ b/nx.json
@@ -25,7 +25,8 @@
   },
   "targetDefaults": {
     "build": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     },
     "package": {
       "dependsOn": ["^package"]
