--- a/apps/public-docsite-v9/package.json
+++ b/apps/public-docsite-v9/package.json
@@ -37,6 +37,7 @@
     "@fluentui/theme-designer": "*",
     "@fluentui/react-search-preview": "*",
     "@griffel/react": "^1.5.14",
+    "@microsoft/applicationinsights-web": "^3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-window": "^1.8.6",
