--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@nrwl/node": "13.10.6",
     "@nrwl/workspace": "13.10.6",
     "@octokit/rest": "18.12.0",
+    "@playwright/test": "1.28.1",
     "@storybook/addon-a11y": "6.5.15",
     "@storybook/addon-actions": "6.5.15",
     "@storybook/addon-docs": "6.5.15",
