--- a/package.json
+++ b/package.json
@@ -283,6 +283,7 @@
     "p-queue": "6.6.2",
     "parse-diff": "0.7.1",
     "path-browserify": "1.0.1",
+    "playwright": "1.28.1",
     "plop": "2.6.0",
     "portfinder": "1.0.28",
     "postcss": "8.3.5",
