--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -176,7 +176,7 @@
     "start": "yarn start-storybook -p 6006 --docs --no-manager-cache",
     "start-storybook": "node node_modules/@storybook/html/bin/index",
     "build-storybook": "node node_modules/@storybook/html/bin/build -o ./dist/storybook --docs",
-    "test": "playwright test"
+    "test": "npx playwright test"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "7.31.2",
