--- a/tools/workspace-plugin/tsconfig.json
+++ b/tools/workspace-plugin/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "esModuleInterop": true,
     "module": "commonjs"
   },
   "files": [],
