--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/microsoft/fluentui"
   },
   "engines": {
-    "node": "^16.18.1 || ^18.0.0"
+    "node": "^16.18.1"
   },
   "scripts": {
     "build": "lage build --verbose",
