chore(web-components): Add playwright testing for v3 web components (#28142)
* setup playwright testing

* fix deps and update readme

* add playwright to ensure browsers and deps are installed

* test npx command playwright

* add pretest hook to test

* add dev specific testing command so we can run ci pretest

* point to the right directory chris...

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@nrwl/node": "13.10.6",
     "@nrwl/workspace": "13.10.6",
     "@octokit/rest": "18.12.0",
+    "@playwright/test": "1.28.1",
     "@storybook/addon-a11y": "6.5.15",
     "@storybook/addon-actions": "6.5.15",
     "@storybook/addon-docs": "6.5.15",
@@ -282,6 +283,7 @@
     "p-queue": "6.6.2",
     "parse-diff": "0.7.1",
     "path-browserify": "1.0.1",
+    "playwright": "1.28.1",
     "plop": "2.6.0",
     "portfinder": "1.0.28",
     "postcss": "8.3.5",
