--- a/packages/react-components/react-nav/package.json
+++ b/packages/react-components/react-nav/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@fluentui/react-nav",
-  "version": "9.0.0-alpha.0",
+  "name": "@fluentui/react-nav-preview",
+  "version": "0.0.0",
   "private": true,
   "description": "A react component that provides affordances for top level app navigation",
   "main": "lib-commonjs/index.js",
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
     "@fluentui/react-conformance": "*",
-    "@fluentui/react-conformance-griffel": "9.0.0-beta.19",
+    "@fluentui/react-conformance-griffel": "*",
     "@fluentui/scripts-api-extractor": "*",
     "@fluentui/scripts-tasks": "*"
   },
